2002-07-26  Josh  <huber@alum.wpi.edu>

	* tmda.el: Misc Fixes, also add tmda-pending-count
	* tmda.el (tmda-addr-at-point):
	* tmda.el (tmda-pending-apply-changes): Update pending count
	* tmda.el (tmda-pending-count): New.
	* tmda.el (tmda-pending-update-count): New.

2002-07-08  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* qmail-smtpd_auth.patch: Removed.

	* README.RELAY: Removed.

2002-05-14  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* sample.tmdarc: Remove CRYPT_KEY.

2002-05-02  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* sample.tmdarc: Replace LOCAL_DELIVERY_AGENT with DELIVERY.
	
2002-04-30  Jason R. Mastaler  <jason@mastaler.com>

	* sample.tmdarc: Include example settings for optional variables
	in Defaults.py instead of here.

2002-04-10  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* tmda.spec (Requires): Require /usr/bin/python2, not a package
	named "python2".

2002-04-03  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* setup.py: Remove, unmaintained.

2002-03-28  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* collectaddys: Do Maildir checking with os.path.isdir().
	
2002-03-27  Jason R. Mastaler  <jason@aguirre.la.mastaler.com>

	* Add collectaddys.

2002-03-26  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* sample.tmdarc: Add DELIVERED_CACHE & DELIVERED_CACHE_LEN.

2002-03-06  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* sample.tmdarc: Add TEMPLATE_DIR, remove CONFIRM_ACCEPT_TEMPLATE
	and CONFIRM_REQUEST_TEMPLATE.

2002-02-28  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* sample.tmdarc: Add CONFIRM_ADDRESS.

2002-02-27  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* tmda.spec (Source0): Update download link.

2002-02-22  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Remove list2cdb and list2bm.

2002-02-13  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
